mobile responsiveness and gap fixed

--- a/index.css
+++ b/index.css
@@ -363,6 +363,7 @@ body:not(.single-page) section.panel {
   justify-content: center;
   align-items: center;
   position: relative;
+  /* height: 1000px !important; */
 }
 
 body:not(.single-page) .panel .panel-container {
@@ -386,6 +387,7 @@ body:not(.single-page) .panel .panel-container {
   justify-content: center;
   align-items: center;
   position: sticky;
+  /* height: 100px !important; */
 }
 
 /* .news{
@@ -395,7 +397,7 @@ body:not(.single-page) .panel .panel-container {
 #horizontal-scroll {
   overflow: hidden;
   position: relative;
-  height: 100vh;
+  height: 1000px !important;
   min-height: 100vh;
 }
 
@@ -882,7 +884,7 @@ body:not(.single-page) .panel .panel-container {
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.7);
-  z-index: 1000;
+  z-index: 1000 !important;
   padding: 20px;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
@@ -961,6 +963,17 @@ body:not(.single-page) .panel .panel-container {
   font-family: var(--font-family-second);
   font-weight: 400;
 }
+
+/* .backdrop{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+} */
 
 /* ========== NEWS SECTION ========== */
 .news-container {
